--- a/arch/arm64/configs/lineage_athene_defconfig
+++ b/arch/arm64/configs/lineage_athene_defconfig
@@ -28,6 +28,7 @@ CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=8
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
+CONFIG_KERNEL_MODE_NEON=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
@@ -370,7 +371,7 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
-CONFIG_STRICT_MEMORY_RWX=y
+# CONFIG_STRICT_MEMORY_RWX is not set
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_SECCOMP=y
@@ -416,7 +417,7 @@ CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
-CONFIG_SUSPEND_TIME_TIMEKEEPING=Y
+# CONFIG_SUSPEND_TIME_TIMEKEEPING is not set
 # CONFIG_SUSPEND_WATCHDOG is not set
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 # CONFIG_SUSPEND_DEBUG is not set
@@ -447,7 +448,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
@@ -999,6 +1000,7 @@ CONFIG_OF_PCI=y
 CONFIG_OF_PCI_IRQ=y
 CONFIG_OF_SPMI=y
 CONFIG_OF_SLIMBUS=y
+CONFIG_OF_CORESIGHT=y
 CONFIG_OF_BATTERYDATA=y
 CONFIG_OF_RESERVED_MEM=y
 # CONFIG_PARPORT is not set
@@ -1714,7 +1716,7 @@ CONFIG_DIAG_OVER_USB=y
 # DIAG traffic over TTY
 #
 CONFIG_DIAG_OVER_TTY=y
-CONFIG_PANIC_ON_RT_THROTTLING=y
+# CONFIG_PANIC_ON_RT_THROTTLING is not set
 
 #
 # HSIC/SMUX support for DIAG
@@ -3497,7 +3499,27 @@ CONFIG_MSM_IRQ=y
 #
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
-# CONFIG_CORESIGHT is not set
+CONFIG_CORESIGHT=y
+CONFIG_CORESIGHT_EVENT=y
+CONFIG_HAVE_CORESIGHT_SINK=y
+CONFIG_CORESIGHT_FUSE=y
+CONFIG_CORESIGHT_CTI=y
+CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
+CONFIG_CORESIGHT_CSR=y
+CONFIG_CORESIGHT_TMC=y
+CONFIG_CORESIGHT_TPIU=y
+CONFIG_CORESIGHT_FUNNEL=y
+CONFIG_CORESIGHT_REPLICATOR=y
+# CONFIG_CORESIGHT_TPDA is not set
+# CONFIG_CORESIGHT_TPDM is not set
+# CONFIG_CORESIGHT_DBGUI is not set
+CONFIG_CORESIGHT_STM=y
+# CONFIG_CORESIGHT_STM_DEFAULT_ENABLE is not set
+CONFIG_CORESIGHT_HWEVENT=y
+# CONFIG_CORESIGHT_ETM is not set
+# CONFIG_CORESIGHT_ETMV4 is not set
+# CONFIG_CORESIGHT_REMOTE_ETM is not set
+# CONFIG_CORESIGHT_QPDI is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
